Woodcutting: Tree Compactor (#1058)
* Created Tree Compactor cmd

* Created Tree Compactor item

* Updated tree compactor description

* Added basic compaction functionality

* Fixed tab completions

* Allowed for tree compactor to only compact specific log types

* Implemented 5 minute cooldown for Tree Compactor

* Now compacted logs can be sold to shop keeper

* Added dependency for Tree Compactor

* Temporarily removed perk from menu

* Allowed the player to be able to see usage w/ the cooldown triggering

* Removed second line

* Changed code so that if no logs were compacted, cooldown will instantly reset (so just not happen)

* Refactored code for tab completions

* Admins can now place compacted logs

* Created new SQL migration for the compacted log item

--- a/progression/src/main/resources/configs/professions/woodcutting.yml
+++ b/progression/src/main/resources/configs/professions/woodcutting.yml
@@ -20,6 +20,10 @@ skills:
   enchanted_lumberfall:
     enabled: true
     maxlevel: 250
+  tree_compactor:
+    enabled: true
+    maxlevel: 1
+    cooldown: 300.0
   auto_planter:
     enabled: true
     maxlevel: 1
