#1059 - Add a way to stop energy degeneration. Add singletons to most of ClansListeners. Explicitly reload-listeners in plugin

--- a/clans/src/main/resources/configs/config.yml
+++ b/clans/src/main/resources/configs/config.yml
@@ -59,7 +59,10 @@ clans:
       level: 1
       points: 0
   energy:
-    energyWarnLevel: 1.0
+    enabled: true
+    # minutes
+    energyWarnLevel: 30.0
+
   dominance:
     enabled: true
     fixed:
