ezrn and samitos favourite ability

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -846,6 +846,7 @@ skills:
       durationIncreasePerLevel: 0.5
       burstDuration: 1.0
       radius: 6.0
+      radiusIncreasePerLevel: 0.0
   warlock:
     bloodbarrier:
       enabled: true
