Add back button to settings, fix misc issues

--- a/core/src/main/resources/configs/config.yml
+++ b/core/src/main/resources/configs/config.yml
@@ -259,7 +259,7 @@ tab:
   title: Welcome to Mineplex Clans!
   website: https://mineplex.com
   server: Clans-1
-  shop: mineplex.com/shop
+  shop: /store
 energy:
   nerf-energy-regen: false
 combat:
