Update some textures, small bug fixes & shopkeeper tweaks

--- a/core/src/main/resources/configs/config.yml
+++ b/core/src/main/resources/configs/config.yml
@@ -39,7 +39,7 @@ items:
 command:
   list:
     enabled: true
-    requiredRank: PLAYER}
+    requiredRank: PLAYER
   teleport:
     enabled: true
     requiredRank: ADMIN
