Kit Command Cooldown (#1111)
* coin drops

* fix kit cooldown

* kit command simplification

--- a/champions/src/main/resources/configs/config.yml
+++ b/champions/src/main/resources/configs/config.yml
@@ -8,6 +8,8 @@ chat:
 command:
   kit:
     enabled: true
+    kitCooldown: enabled
+    kitCooldownTimeMinutes: 60,0
     requiredRank: ADMIN
   champions:
     reload:
