--- a/champions/src/main/resources/configs/config.yml
+++ b/champions/src/main/resources/configs/config.yml
@@ -8,7 +8,7 @@ chat:
 command:
   kit:
     enabled: true
-    kitCooldown: enabled
+    kitCooldown: true
     kitCooldownTimeMinutes: 60,0
     requiredRank: ADMIN
   champions:
